# ytm

./: Cargo.toml  Dockerfile.aarch64  README.md
.github/workflows/: ci.yml  dev.yml
locales/: app.toml  auth.toml
src/: auth.rs  main.rs  misc.rs
src/gui/: auth.rs  header.rs  mod.rs
