[package]
name = "ytm"
version = "0.1.0"
edition = "2024"

[package.metadata.i18n]
available-locales = ["en", "ru"]
default-locale = "en"
load-path = "locales"

[dependencies]
log = "0.4.29"
env_logger = "0.11.9"

anyhow = "1.0.102"
clap = { version = "4.5.60", default-features = false, features = [
    "std",
    "help",
    "derive",
] }
rust-i18n = "3.1.5"

egui = { version = "0.33.3", default-features = false, features = [
    "default_fonts",
] }
eframe = { version = "0.33.3", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }
